--- a/dining_room/static/react/index.html
+++ b/dining_room/static/react/index.html
@@ -1,5 +1,3 @@
-{% load static %}
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,19 +5,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  {% block title %}<title>Robot Assistance Study</title>{% endblock %}
-  <link rel="shortcut icon" href="{% static 'favicon.ico' %}"/>
+  <title>Robot Assistance Study</title>
+  <link rel="shortcut icon" href="http://localhost:8000/static/favicon.ico"/>
 
-  {% block styles %}
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  {% endblock %}
 </head>
+
 <body>
-
-  {% block content %}
-  {% endblock %}
-
-  {% block scripts %}
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" crossorigin></script>
-  {% endblock %}
+  <div id="app">
+  </div>
+  <noscript>You need to enable JavaScript for this study</noscript>
+  <script src="http://localhost:9000/static/dining_room/study.js"></script>
 </body>
+</html>
