--- a/dining_room/static/react/index.html
+++ b/dining_room/static/react/index.html
@@ -7,6 +7,8 @@
 
   <title>Robot Assistance Study</title>
   <link rel="shortcut icon" href="http://localhost:8000/static/favicon.ico"/>
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin>
   <link rel="stylesheet" href="/static/dining_room/index.css">
 </head>
 
