Refactor to functions; reuse action constants; refactor connections to the store

--- a/dining_room/static/react/index.html
+++ b/dining_room/static/react/index.html
@@ -23,7 +23,9 @@
       EXPERIMENT_CONDITION: {
         show_dx_suggestions: true,
         show_ax_suggestions: true
-      }
+      },
+      ACTIONS: {"at_c": "Robot is at Couch", "at_dt": "Robot is at Dining Table", "at_kc": "Robot is at Kitchen Counter", "go_to_c": "Go to Couch", "go_to_dt": "Go to Dining Table", "go_to_kc": "Go to Kitchen Counter", "look_at_c": "Look at Couch", "look_at_dt": "Look at Dining Table", "look_at_kc": "Look at Kitchen Counter", "pick_bowl": "Pick Bowl", "pick_jug": "Pick Jug", "pick_mug": "Pick Mug", "place": "Stow object in gripper"},
+      DIAGNOSES: {"lost": "The robot is lost", "cannot_pick": "The mug cannot be picked up", "cannot_see": "The mug is not visible", "different_location": "The mug is not where it should be", "unknown": "Unknown", "none": "There is no error"}
     };
   </script>
 
