JS code is mostly complete

--- a/dining_room/static/react/index.html
+++ b/dining_room/static/react/index.html
@@ -16,9 +16,40 @@
 <!-- We want to set these constant before the React app is loaded -->
   <script type="text/javascript">
     window.constants = {
-      START_STATE: "{{ request.user.start_condition }}",
-      CURRENT_STATE: "{{ current_state }}",
-      CURRENT_TRANSITION: "{{ current_transition }}",
+      INITIAL_STATE: {
+        ui_state: {
+          video_loaded: false,
+          video_playing: false,
+          confirmed_dx: [],
+          selected_action: null,
+          // Timestamps
+          video_loaded_time: null,
+          video_stop_time: null,
+          dx_selected_time: null,
+          ax_selected_time: null
+        },
+        scenario_state: {
+          server_state_tuple: ['dt', 'kc', 'gripper', 'default', 'gripper', 'mug', 'dt'],
+          video_link: "https://dl.dropboxusercontent.com/s/qxro9nj1zbf6mmf/dt.kc.gripper.default.gripper.noop.mp4",
+          robot_beliefs: [
+              { attr: "Location", value: "Dining Table" },
+              { attr: "Object in gripper", value: "Empty" },
+              { attr: "Objects in view", value: ["Jug, Bowl"] },
+              { attr: "Arm status", value: "In motion" }
+          ],
+          valid_actions: ['at_c', 'at_dt', 'go_to_c', 'go_to_dt', 'look_at_c', 'look_at_dt', 'pick_bowl', 'pick_mug', 'place'],
+          dx_suggestions: ["cannot_see"],
+          ax_suggestions: ["look_at_dt", "go_to_c", "place"],
+          action_result: true,
+          scenario_completed: false
+        },
+        history: {
+          dx_to_add: null,
+          ax_to_add: null,
+          result_to_add: null,
+          history: []
+        }
+      },
       NEXT_URL: "",
       EXPERIMENT_CONDITION: {
         show_dx_suggestions: true,
