Added the max number of actions check

--- a/dining_room/static/react/index.html
+++ b/dining_room/static/react/index.html
@@ -22,6 +22,7 @@
           video_playing: false,
           confirmed_dx: [],
           selected_action: null,
+          selected_action_idx: 0,
           // Timestamps
           video_loaded_time: null,
           video_stop_time: null,
