--- a/dining_room/static/react/index.html
+++ b/dining_room/static/react/index.html
@@ -9,6 +9,7 @@
   <link rel="shortcut icon" href="http://localhost:8000/static/favicon.ico"/>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.6.2/css/bootstrap-slider.min.css" integrity="sha256-G3IAYJYIQvZgPksNQDbjvxd/Ca1SfCDFwu2s2lt0oGo=" crossorigin="anonymous" />
   <link rel="stylesheet" href="/static/dining_room/study.css">
 </head>
 
@@ -21,12 +22,14 @@
           video_loaded: false,
           video_playing: false,
           confirmed_dx: [],
+          dx_certainty: null,
           selected_action: null,
           selected_action_idx: 0,
           // Timestamps
           video_loaded_time: null,
           video_stop_time: null,
           dx_selected_time: null,
+          dx_confirmed_time: null,
           ax_selected_time: null
         },
         scenario_state: {
@@ -58,7 +61,7 @@
         show_ax_suggestions: true
       },
       ACTIONS: {"at_c": "Update robot's location belief to: Couch", "at_dt": "Update robot's location belief to:  Dining Table", "at_kc": "Update robot's location belief to:  Kitchen Counter", "go_to_c": "Navigate to Couch", "go_to_dt": "Navigate to Dining Table", "go_to_kc": "Navigate to Kitchen Counter", "look_at_c": "Look at Couch", "look_at_dt": "Look at Dining Table", "look_at_kc": "Look at Kitchen Counter", "pick_bowl": "Pick up the Bowl", "pick_jug": "Pick up the Jug", "pick_mug": "Pick up the Cup", "place": "Stow object in gripper"},
-      DIAGNOSES: {"lost": "The robot is lost", "cannot_pick": "The cup cannot be picked up", "cannot_see": "The cup is not visible", "different_location": "The cup is not where it should be", "unknown": "I don't know", "none": "There is no error"}
+      DIAGNOSES: {"lost": "The robot is lost", "cannot_pick": "The cup cannot be picked up", "cannot_see": "The cup is not visible", "different_location": "The cup is not where it should be", "none": "There is no error"}
     };
   </script>
 
