Wording changes. Gripper->hand, error->problem

--- a/dining_room/static/react/index.html
+++ b/dining_room/static/react/index.html
@@ -37,7 +37,7 @@
           "video_link": "https://dl.dropboxusercontent.com/s/fjfpvpwfnc23yuo/kc.kc.default.above_mug.default.noop.mp4",
           "robot_beliefs": [
             {"attr": "Location", "value": "Kitchen Counter"},
-            {"attr": "Object in gripper", "value": "Empty"},
+            {"attr": "Object in hand", "value": "Nothing"},
             {"attr": "Objects in view", "value": ["Jug", "Bowl", "Cup"]},
             {"attr": "Arm status", "value": "Not Moving"}
           ],
@@ -60,8 +60,8 @@
         show_dx_suggestions: true,
         show_ax_suggestions: true
       },
-      ACTIONS: {"at_c": "Update robot's location belief to: Couch", "at_dt": "Update robot's location belief to:  Dining Table", "at_kc": "Update robot's location belief to:  Kitchen Counter", "go_to_c": "Navigate to Couch", "go_to_dt": "Navigate to Dining Table", "go_to_kc": "Navigate to Kitchen Counter", "look_at_c": "Look at Couch", "look_at_dt": "Look at Dining Table", "look_at_kc": "Look at Kitchen Counter", "pick_bowl": "Pick up the Bowl", "pick_jug": "Pick up the Jug", "pick_mug": "Pick up the Cup", "place": "Stow object in gripper"},
-      DIAGNOSES: {"lost": "The robot is lost", "cannot_pick": "The cup cannot be picked up", "cannot_see": "The cup is not visible", "different_location": "The cup is not where it should be", "none": "There is no error"}
+      ACTIONS: {"at_c": "Update robot's location belief to: Couch", "at_dt": "Update robot's location belief to:  Dining Table", "at_kc": "Update robot's location belief to:  Kitchen Counter", "go_to_c": "Navigate to Couch", "go_to_dt": "Navigate to Dining Table", "go_to_kc": "Navigate to Kitchen Counter", "look_at_c": "Look at Couch", "look_at_dt": "Look at Dining Table", "look_at_kc": "Look at Kitchen Counter", "pick_bowl": "Pick up the Bowl", "pick_jug": "Pick up the Jug", "pick_mug": "Pick up the Cup", "place": "Put away held object"},
+      DIAGNOSES: {"lost": "The robot is lost", "cannot_pick": "The cup cannot be picked up", "cannot_see": "The cup is not visible", "different_location": "The cup is not where it should be", "none": "There is no problem"}
     };
   </script>
 
