Brief foray into different visualization for actions

--- a/dining_room/static/react/index.html
+++ b/dining_room/static/react/index.html
@@ -44,7 +44,7 @@
           "valid_actions": {
             "at_c": true, "at_dt": true, "at_kc": true, "go_to_c": true, "go_to_dt": true, "go_to_kc": true, "remove_obstacle": false, "out_of_collision": false, "look_at_c": true, "look_at_dt": true, "look_at_kc": true, "pick_bowl": true, "pick_jug": true, "pick_mug": false, "place": false, "restart_video": true, "find_charger": false
           },
-          "dx_suggestions": ["cannot_see", "cannot_pick"],
+          "dx_suggestions": ["cannot_see"],
           "ax_suggestions": ["pick_jug"],
           "action_result": true,
           "scenario_completed": false
