--- a/dining_room/static/react/index.html
+++ b/dining_room/static/react/index.html
@@ -8,8 +8,9 @@
   <title>Robot Assistance Study</title>
   <link rel="shortcut icon" href="http://localhost:8000/static/favicon.ico"/>
 
-  <link rel="stylesheet" href="/static/dining_room/study.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.6.2/css/bootstrap-slider.min.css" integrity="sha256-G3IAYJYIQvZgPksNQDbjvxd/Ca1SfCDFwu2s2lt0oGo=" crossorigin="anonymous" />
+  <link rel="stylesheet" href="/static/dining_room/study.css">
 </head>
 
 <body>
@@ -57,7 +58,7 @@
       NEXT_STATE_URL: "http://localhost:8000/_/next_state",
       EXPERIMENT_CONDITION: {
         show_dx_suggestions: true,
-        show_ax_suggestions: false
+        show_ax_suggestions: true
       },
       ACTIONS: {"at_c": "Update robot's location belief to: Couch", "at_dt": "Update robot's location belief to:  Dining Table", "at_kc": "Update robot's location belief to:  Kitchen Counter", "go_to_c": "Navigate to Couch", "go_to_dt": "Navigate to Dining Table", "go_to_kc": "Navigate to Kitchen Counter", "remove_obstacle": "Remove the obstacle blocking navigation", "out_of_collision": "Move away from a collision", "look_at_c": "Look at Couch", "look_at_dt": "Look at Dining Table", "look_at_kc": "Look at Kitchen Counter", "pick_bowl": "Pick up the Bowl", "pick_jug": "Pick up the Jug", "pick_mug": "Pick up the Cup", "place": "Put away held object", "restart_video": "Restart the camera", "find_charger": "Find the charger and navigate to it"},
       ACTIONS_ORDER: ["at_c", "at_dt", "at_kc", "go_to_c", "go_to_dt", "go_to_kc", "remove_obstacle", "out_of_collision", "look_at_c", "look_at_dt", "look_at_kc", "pick_bowl", "pick_jug", "pick_mug", "place", "restart_video", "find_charger"],
